<resources>
    <string name="facebook_app_id" translatable="false">416459182335779</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb416459182335779</string>
    <string name="app_name" translatable="false">Infinity SMS</string>
    <string name="sync_account_type" translatable="false">com.messenger.sms.infinity.theme.sync_account</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus" translatable="false">Infinity SMS+</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_save">Save to gallery</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love texting again</string>
    <string name="main_default_sms_message">Make Infinity SMS your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">Infinity SMS needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">Infinity SMS needs permission to view your contacts</string>
    <string name="main_permission_allow">Allow</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_more">More</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus">Infinity SMS+</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="drawer_plus_banner_title">Infinity SMS+</string>
    <string name="drawer_plus_banner_summary">Unlock amazing new features, and support development</string>
    <string name="rate_title">Enjoying Infinity SMS?</string>
    <string name="rate_summary">Share some love and rate us on Google Play!</string>
    <string name="rate_okay">OKAY!</string>
    <string name="rate_dismiss">DISMISS</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <string name="dialog_usage_title">Want to start Infinity SMS when click desktop icon?</string>
    <string name="dialog_usage_message">Grant usage access permission to enable this function.</string>
    <string name="permission_guide_description">Enable now and enjoy Infinity SMS.</string>
    <string name="got_it">Got it</string>
    <string name="promotion_enable_btn">ENABLE</string>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary">Recipients and replies will be visible to everyone</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled for</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_plus">You must unlock Infinity SMS+ to use scheduled messaging</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_subject">Subject: %s</string>
    <string name="compose_details_priority">Priority: %s</string>
    <string name="compose_details_size">Size: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_contact_error">Error reading contact</string>
    <string name="compose_sim_cd">%s selected, change SIM card</string>
    <string name="compose_send_cd">Send message</string>
    <string name="message_status_sending">Sending…</string>
    <string name="message_status_delivered">Delivered %s</string>
    <string name="message_status_failed">Failed to send. Tap to try again</string>
    <string name="info_title">Details</string>
    <string name="info_name">Conversation title</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_theme">Theme</string>
    <string name="info_archive">Archive</string>
    <string name="info_unarchive">Unarchive</string>
    <string name="info_block">Block</string>
    <string name="info_unblock">Unblock</string>
    <string name="info_delete">Delete conversation</string>
    <string name="gallery_error">Couldn\'t load media</string>
    <string name="gallery_toast_saved">Saved to gallery</string>
    <string name="backup_title">Backup and restore</string>
    <string name="backup_backing_up">Backing up messages</string>
    <string name="backup_restoring">Restoring from backup</string>
    <string name="backup_last">Last backup</string>
    <string name="backup_loading">Loading…</string>
    <string name="backup_never">Never</string>
    <string name="backup_restore_title">Restore</string>
    <string name="backup_restore_summary">Select a backup</string>
    <string name="backup_restore_error_plus">Please unlock Infinity SMS+ to use backup and restore</string>
    <string name="backup_restore_error_backup">Backup in progress…</string>
    <string name="backup_restore_error_restore">Restore in progress…</string>
    <string name="backup_restore_confirm_title">Restore from backup</string>
    <string name="backup_restore_confirm_message">Are you sure you would like to restore your messages from this backup?</string>
    <string name="backup_restore_stop_title">Stop restore</string>
    <string name="backup_restore_stop_message">Messages that have already been restored will remain on your device</string>
    <string name="backup_restore_dialog_title">Backups</string>
    <string name="backup_restore_dialog_summary" translatable="false">/Infinity SMS/Backups</string>
    <string name="backup_restore_dialog_empty">No backups found</string>
    <plurals name="backup_message_count">
        <item quantity="zero">No messages</item>
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="backup_disclaimer">Currently, only SMS is supported by Backup and Restore. MMS support and scheduled backups will be coming soon!</string>
    <string name="backup_now">Backup now</string>
    <string name="backup_progress_parsing">Parsing backup…</string>
    <string name="backup_progress_running">%d/%d messages</string>
    <string name="backup_progress_saving">Saving backup…</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_general">General</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_night_title">Night mode</string>
    <string name="settings_black_title">Pure black night mode</string>
    <string name="settings_night_start_title">Start time</string>
    <string name="settings_night_end_title">End time</string>
    <string name="settings_text_size_title">Font size</string>
    <string name="settings_system_font_title">Use system font</string>
    <string name="settings_auto_emoji_title">Automatic emoji</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_delayed_title">Delayed sending</string>
    <string-array name="settings_swipe_actions">
        <item>None</item>
        <item>Archive</item>
        <item>Delete</item>
        <item>Call</item>
        <item>Mark read</item>
        <item>Mark unread</item>
    </string-array>
    <string name="settings_swipe_actions_summary">Configure swipe actions for conversations</string>
    <string name="settings_delivery_title">Delivery confirmations</string>
    <string name="settings_delivery_summary">Confirm that messages were sent successfully</string>
    <string name="settings_signature_title">Signature</string>
    <string name="settings_unicode_title">Strip accents</string>
    <string name="settings_unicode_summary">Remove accents from characters in outgoing SMS messages</string>
    <string name="settings_mobile_title">Mobile numbers only</string>
    <string name="settings_mobile_summary">When composing a message, only show mobile numbers</string>
    <string name="settings_mms_size_title">Auto-compress MMS attachments</string>
    <string name="settings_sync_title">Sync messages</string>
    <string name="settings_sync_summary">Re-sync your messages with the native Android SMS database</string>
    <string name="settings_about_title">About Infinity SMS</string>
</resources>